Hook into renderer and add RenderText
- Update hello_world project to use rendering instead of logging.

--- a/fuse/fuse.vcxproj
+++ b/fuse/fuse.vcxproj
@@ -84,7 +84,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -106,7 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -157,12 +157,15 @@
     <ClInclude Include="include\fuse\Platform.h" />
     <ClInclude Include="include\fuse\ExeProcess.h" />
     <ClInclude Include="include\fuse\Player.h" />
+    <ClInclude Include="include\fuse\render\Renderer.h" />
+    <ClInclude Include="include\fuse\render\Text.h" />
     <ClInclude Include="include\fuse\Types.h" />
     <ClInclude Include="include\fuse\Weapon.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ExeProcess.cpp" />
     <ClCompile Include="src\Fuse.cpp" />
+    <ClCompile Include="src\render\Render.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
