--- a/examples/settings/settings.vcxproj
+++ b/examples/settings/settings.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d08949c9-5b6c-4714-b936-ddd19b8f5f6f}</ProjectGuid>
-    <RootNamespace>bounds</RootNamespace>
+    <ProjectGuid>{5E51DD23-BF67-4302-89E7-9B8C6DD839BC}</ProjectGuid>
+    <RootNamespace>settings</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -141,7 +141,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="bounds_main.cpp" />
+    <ClCompile Include="settings_main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
