Improve settings and add file writer
- Massage data into better format for display instead of being
  multiplied by 1000.
- Add a file writer for settings that can be activated with the end key
  when the settings window is open.
- Add a header to the settings window to display keybinds.

--- a/examples/settings/settings.vcxproj
+++ b/examples/settings/settings.vcxproj
@@ -141,7 +141,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SettingsWriter.cpp" />
     <ClCompile Include="settings_main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SettingsWriter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
