--- a/fuse/fuse.vcxproj
+++ b/fuse/fuse.vcxproj
@@ -157,6 +157,7 @@
   <ItemGroup>
     <ClInclude Include="include\fuse\ClientSettings.h" />
     <ClInclude Include="include\fuse\Args.h" />
+    <ClInclude Include="include\fuse\Clock.h" />
     <ClInclude Include="include\fuse\Fuse.h" />
     <ClInclude Include="include\fuse\HookInjection.h" />
     <ClInclude Include="include\fuse\Map.h" />
